// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can call an onClick callback 1`] = `
<li
  class="EntityListItem EntityListItem--is-interactive"
  data-test-id="cf-ui-entity-list-item"
>
  <a
    class="EntityListItem__inner"
    tabindex="0"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </div>
  </a>
</li>
`;

exports[`renders the component 1`] = `
<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </div>
  </article>
</li>
`;

exports[`renders the component as an \`a\` element if passed a href prop 1`] = `
<li
  class="EntityListItem EntityListItem--is-interactive"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
    href="#"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </div>
  </article>
</li>
`;

exports[`renders the component as an Asset with a lower-cased entityType 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component as an Asset with a title-cased entityType 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component as an asset entityType icon with an archived status 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #A82D3E;
  background-color: #FCE9E8;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            archived
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component as an asset entityType variant 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component as an asset thumbnail preview 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <img
          alt="Something clever"
          class="EntityListItem__thumbnail"
          src="https://path/to/thumbnail.jpg"
        />
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component as isLoading 1`] = `
<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <svg
      aria-label="Loading component..."
      class="SkeletonContainer"
      data-test-id="cf-ui-skeleton-form"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width="100%"
    >
      <title>
        Loading component...
      </title>
      <rect
        clip-path="url(#f36-entity-list-item-skeleton)"
        height="100%"
        style="fill: url(#cf-ui-skeleton-clip-gradient-0);"
        width="100%"
        x="0"
        y="0"
      />
      <defs>
        <clippath
          id="f36-entity-list-item-skeleton"
        >
          <rect
            data-test-id="cf-ui-skeleton-image"
            height="46"
            rx="0"
            ry="0"
            width="46"
          />
          <rect
            height="18"
            rx="0"
            ry="0"
            width="100%"
            x="54"
            y="0"
          />
          <rect
            height="18"
            rx="0"
            ry="0"
            width="80%"
            x="54"
            y="26"
          />
        </clippath>
        <lineargradient
          id="cf-ui-skeleton-clip-gradient-0"
        >
          <stop
            offset="0%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              dur="2s"
              id="animation-1"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#f7f9fa"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-1.begin+0.25s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-1.begin+0.5s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </article>
</li>
`;

exports[`renders the component with a description 1`] = `
<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </div>
  </article>
</li>
`;

exports[`renders the component with a drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="Icon Icon--small Icon--muted"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder entry
    </span>
  </div>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component with a status 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component with active drag state 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem EntityListItem--drag-active"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component with an additional class name 1`] = `
<li
  class="EntityListItem my-extra-class"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </div>
  </article>
</li>
`;

exports[`renders the component with custom drag handle 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="Icon Icon--small Icon--muted"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder card
    </span>
  </div>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </div>
  </article>
</li>
`;

exports[`renders the component with disabled actions 1`] = `
<li
  class="EntityListItem my-extra-class"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </div>
  </article>
</li>
`;

exports[`renders the component with dropdownListElements 1`] = `
.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #1A6848;
  background-color: #D9F2E4;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <div
      class="EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="Icon Icon--small Icon--muted"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
        <div
          class="Dropdown EntityListItem__actions"
          data-test-id="cf-ui-card-actions"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="IconButton IconButton--secondary"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <div
              class="IconButton__inner"
              tabindex="-1"
            >
              <svg
                class="Icon Icon--small Icon--primary IconButton__icon"
                data-test-id="cf-ui-icon"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
              <span
                class="IconButton__label"
              >
                Actions
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </article>
</li>
`;
